@@ -20,6 +20,9 @@ Upgrading
 ---------
    - The return value of SelectStatement::getLimit as been changed from DataLimits
      to int.
+   - Custom index implementation should be aware that the method Indexer::indexes()
+     has been removed as its contract was misleading and all custom implementation
+     should have almost surely returned true inconditionally for that method.
 
 
 3.0
